--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -42,4 +42,11 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.24/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.24/dist/js/uikit-icons.min.js"></script>
 
+<style>
+  .uk-card {
+    margin: 10px;
+  }
+  
+</style>
+
 <!-- end custom head snippets -->
