--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -35,12 +35,12 @@
   }
 
   h3, h4 {
-    font-size: $type-size-4;
+    font-size: $type-size-5;
   }
 
   p, li {
     font-family: $sans-serif;
-    font-size: $type-size-5;
+    font-size: $type-size-6;
     line-height: 1.5;
   }
 
@@ -83,14 +83,16 @@
   }
 
   img {
-    max-width: 175px;
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* This will maintain the aspect ratio */
     border-radius: 50%;
 
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+        padding: 5px;
+        border: 1px solid $border-color;
     }
-  }
+}
+
 }
 
 .author__content {
@@ -118,7 +120,7 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-4;
+  font-size: $type-size-5;
 }
 
 .author__bio {
